# datetime-delta

./: .pre-commit-config.yaml  Makefile  README.md  datetime_delta.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test_unit.yml
tests/unit/: test_datetime_delta.py
